[gd_scene load_steps=11 format=3 uid="uid://o7kscbaysa3x"]

[ext_resource type="Script" path="res://Scripts/Mini juegos/enter_mini_juego.gd" id="1_nv4tr"]
[ext_resource type="Texture2D" uid="uid://ls5k6h85fd0y" path="res://Resources/2D/Candado.png" id="2_2ttyo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fthfi"]
size = Vector3(1.72168, 1.43079, 2.21509)

[sub_resource type="Gradient" id="Gradient_w2iv1"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.152299, 0.560345)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.0200602, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f5e58"]
gradient = SubResource("Gradient_w2iv1")
width = 1455
height = 880
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_ouxyw"]
viewport_path = NodePath("Take")

[sub_resource type="Animation" id="Animation_ja4f0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c2yxk"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.433333, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.5, -0.195096, 0.0387426, 0.267893, 0.181286, 0.0358181, -0.0374794, 0.0840643, 0.00957301, -0.00365506, -0.00219338, -0.0237603, -0.0131581, 0.25, 0, 0, -0.25, 0, 0.133333, 0.520468),
"times": PackedFloat32Array(0, 0.433333, 0.466667, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.366667, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.366667, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_piuph"]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.133333, 0.520468, 0.513158, -0.195096, 0.0548246, 0.104904, -0.0475146, 0.5, -0.195096, 0.0387426, 0.25, 0),
"times": PackedFloat32Array(0, 0.566667, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego:scale:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ConedorSpriter/Scale_Sprite/Take_Mini_Juego2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7whw"]
_data = {
"RESET": SubResource("Animation_ja4f0"),
"close": SubResource("Animation_c2yxk"),
"enter": SubResource("Animation_piuph")
}

[node name="Enter_Mini_Juego" type="Node3D"]
script = ExtResource("1_nv4tr")

[node name="Player_enter" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_enter"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.215393, 0)
shape = SubResource("BoxShape3D_fthfi")

[node name="ConedorSpriter" type="Node3D" parent="."]

[node name="Scale_Sprite" type="Node3D" parent="ConedorSpriter"]
transform = Transform3D(1.5, 0, 0, 0, 1.44889, -0.388229, 0, 0.388229, 1.44889, 0, 4.534, 2.669)

[node name="Take_Mini_Juego2" type="Sprite3D" parent="ConedorSpriter/Scale_Sprite"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 7.15256e-08, 0, -7.15256e-08, 1.2, 0, 8.63075e-05, -0.00015986)
visible = false
axis = 1
no_depth_test = true
render_priority = 1
texture = SubResource("GradientTexture2D_f5e58")

[node name="Take_Mini_Juego" type="Sprite3D" parent="ConedorSpriter/Scale_Sprite"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 2.98023e-08, 0, -2.98023e-08, 0.5, 0, 8.63075e-05, -0.00015986)
visible = false
axis = 1
no_depth_test = true
render_priority = 2
texture = SubResource("ViewportTexture_ouxyw")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 1, 0, 3, 0)
modulate = Color(1, 1, 1, 0)
billboard = 1
no_depth_test = true
texture_filter = 2
render_priority = 1
texture = ExtResource("2_2ttyo")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Take" type="SubViewport" parent="."]
size = Vector2i(820, 820)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a7whw")
}

[node name="Reload" type="Timer" parent="."]

[connection signal="area_entered" from="Player_enter" to="." method="_on_player_enter_area_entered"]
[connection signal="area_exited" from="Player_enter" to="." method="_on_player_enter_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
